# zdtwalk

./: .gitignore  Cargo.toml  KEYBINDS.md  LICENSE  README.md
src/: main.rs
src/dts/: binding.rs  error.rs  mod.rs  model.rs  parser.rs  resolver.rs  serializer.rs
src/tui/: app.rs  event.rs  log.rs  mod.rs  render.rs  theme.rs  workspace.rs
src/tui/panels/: file_tree.rs  generator.rs  mod.rs  top_bar.rs  viewer.rs
src/tui/widgets/: dropdown.rs  mod.rs  status_dot.rs
src/west/: cache.rs  discovery.rs  error.rs  fetch.rs  manifest.rs  mod.rs  version.rs
tests/data/: test_binding.yaml
zdtwalk/: Cargo.toml
zdtwalk-dts/: Cargo.toml
zdtwalk-dts/src/: binding.rs  error.rs  lib.rs  parser.rs  resolver.rs  serializer.rs
zdtwalk/src/: main.rs
