[package]
name = "zdtwalk"
version = "0.1.0"
edition = "2021"
description = "A terminal UI for exploring and editing Zephyr device trees"
authors = ["Evin Lodder <evinlodder@gmail.com>"]
license = "MIT"
repository = "https://github.com/evinlodder/zdtwalk"
readme = "README.md"
keywords = ["zephyr", "devicetree", "dts", "tui", "embedded"]
categories = ["command-line-utilities", "embedded"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
fuzzy-matcher = "0.3"
futures = "0.3"
nom = "7"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
